# FreeRTOS

./: .gitignore  FreeRTOSv202212.01 - Shortcut.lnk  README.md
.jxbrowser.userdata/: Local State  Module Info Cache
.jxbrowser.userdata/Default/: Current Session  History  History Provider Cache  History-journal  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Visited Links
.jxbrowser.userdata/Default/Cache/: data_0  data_1  index
.jxbrowser.userdata/Default/Extension State/: LOG
.jxbrowser.userdata/Default/GPUCache/: data_1  index
.jxbrowser.userdata/Default/Platform Notifications/: LOG
.jxbrowser.userdata/Default/Session Storage/: LOG
.jxbrowser.userdata/Default/Site Characteristics Database/: LOG
.jxbrowser.userdata/Default/data_reduction_proxy_leveldb/: LOG
.jxbrowser.userdata/Default/shared_proto_db/: LOG
.jxbrowser.userdata/GrShaderCache/GPUCache/: data_0  data_1  index
.jxbrowser.userdata/Local Storage - EXT/: http_127.0.0.1.localstorage
.jxbrowser.userdata/ShaderCache/GPUCache/: data_1  index
1_TaskControl/1_BlinkingLed/: main.c
1_TaskControl/1_BlinkingLed/myApp/: app.c  app.h
1_TaskControl/1_resuming_and_susbending/myApp/: app.c  app.h
1_TaskControl/2_TaskControlNotifications/: CMakeLists.txt
1_TaskControl/2_TaskControlNotifications/app/: app.h
1_TaskControl/3_TaskControl_NotifyArray/: main.c  tm4c123gh6pm_startup_ccs_gcc.c
1_TaskControl/3_TaskControl_NotifyArray/app/: app.c  app.h
1_TaskControl/3_TaskControl_NotifyArray/freeRTOS_files/: FreeRTOSConfig.h
1_TaskControl/3_resuming_and_susbending/: main.c
2_Queue/1_two_leds_queue/: main.c
2_Queue/1_two_leds_queue/app/: app.c  app.h
2_Queue/2_WeatherStation/: main.c
2_TaskControlNotifications/: .cproject  .project  main.c
2_TaskControlNotifications/app/: app.c
Gcc/.jxbrowser.userdata/: Local State  Module Info Cache
Gcc/Trying_freeRTOS/: .cproject  .project
Gcc/Trying_freeRTOS_GNU/: .ccsproject  .cproject  .project
TaskControl/: .project
TaskControl/app/: app.c
TryingWithoutIde/: CMakeLists.txt  tm4c123g.cmake  tm4c123gh6pm_startup_ccs_gcc.c
TryingWithoutIde/App/: main.c
Trying_freeRTOS/: CMakeLists.txt
Trying_freeRTOS/App/: main.h
trying_cmake/: CMakeLists.txt  CMakeLists_didNotWork.txt  CMakeLists_did_not_work_2.txt  main.c  tm4c123g.cmake
trying_cmake/1/: tm4c123gh6pm_new.cmake
trying_cmake/1/buld/: CMakeCache.txt  Makefile  application.axf  cmake_install.cmake
trying_cmake/2/: CMakeLists (copy).txt  CMakeLists copy 2.txt  CMakeLists.txt  compiler.cmake  tm4c123gh6pm.cmake
trying_cmake/2/app/: main.c
trying_cmake/buld/: CMakeCache.txt  Makefile  cmake_install.cmake
(+73 files in other folders)
